tests/bad/unhandled_expression_sym.oc
/// fail: Expected compiler operation after @

// Previously, this was getting stuck in an infinite loop
// in the parser.

def main() {
    @
}